# rddl-client

./: README.md  pyproject.toml  rddl-notarize.crontab  sonar-project.properties
.github/workflows/: CI.yml
rddl/: attest.py  config.py  main.py  seed.py
rddl_client/: attest.py  config.py  device_info.py  machine_context.py  main.py  seed.py
rddl_client/application/: attest.py  energy.py  seed.py  transfer.py
