[tool.poetry]
name = "rddl"
version = "0.1.0"
description = ""
authors = ["Jürgen Eckel <juergen@riddleandcode.com>"]
license = "AGPLv3"
readme = "README.md"
packages = [{include = "rddl"}]

[tool.poetry.scripts]
rddl = "rddl.main:app"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
mypy = "^0.982"
urllib3 = "^1.26.12"
typer = "^0.6.1"
shellingham = "^1.5.0"
rich = "^12.6.0"
black = "^22.10.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
