[tool.poetry]
name = "rddl-client"
version = "0.2.0"
description = ""
authors = ["Jürgen Eckel <juergen@riddleandcode.com>"]
license = "AGPLv3"
readme = "README.md"
packages = [{include = "rddl_client"}]

[tool.poetry.scripts]
rddl-client = "rddl_client.main:app"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
mypy = "^0.982"
urllib3 = "^1.26.12"
typer = "^0.6.1"
shellingham = "^1.5.0"
rich = "^12.6.0"
python-decouple = "^3.6"
py-dmidecode = "^0.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
